# frontend-sdl2

./: .gitignore  CMakeLists.txt  dependencies_check.cmake
src/: CMakeLists.txt  FileMonitor.cpp  FileMonitor.h  ProjectMSDLApplication.cpp  ProjectMWrapper.cpp  ProjectMWrapper.h  RenderLoop.cpp
src/resources/: projectMSDL.properties.in
